@@ -1,5 +1,13 @@
 2000-12-09  Tristan Tarrant <nadir@users.sourceforge.net>
 
+	* txtscroll.cc: support "double hash"
+	* data/quotes.txt: Fixed quotes a bit
+	* bggame.cc: stop speech if early exit
+	* sigame.cc: small font fix
+	* NEWS: updated
+
+2000-12-09  Tristan Tarrant <nadir@users.sourceforge.net>
+
 	* */Makefile.am: add a CLEANFILES def to all files
 
 2000-12-07  Jeff Freedman  <jeff@amy.nerble.net>
